--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     {% endfor %}
 </table>
 
-<a href="{{ download_url }}">Download full predictions CSV</a>
+<a href="{{ download_url }}">Download full predictions CSV (404)</a>
 {% endif %}
 
 
