--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Churn Prediction</title>
 </head>
 <body>
-<h1>Churn Prediction</h1>
+<h1>Churn Prediction v1</h1>
 
 <form action="/predict" method="post" enctype="multipart/form-data">
     <input type="file" name="file" required>
