--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
 
 <footer class="footer">
     <p>ITHub University © 2025</p>
-    <p>Created with ❤️ by Abramov • Muhovikov • Yazdanova</p>
+    <p>Created with ❤️ by Abramov • Muhkovikov • Yazdanova</p>
 </footer>
 
 </body>
