--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Churn Prediction — Winter ChatGPT</title>
+    <title>Команда №6. IThub University</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/style.css">
 </head>
@@ -14,8 +14,8 @@
 
 <header class="header">
     <div class="logo">
-        <img src="../static/santa-hat.png" alt="logo" class="logo-img">
-        <span>ChurnBot ❄️</span>
+        <img src="../static/assets/new_logo.svg" alt="logo" class="logo-img">
+        <span>| &nbsp;Команда №6. Демонстрация проекта.</span>
     </div>
 </header>
 
@@ -101,8 +101,11 @@
 </main>
 
 <footer class="footer">
-    <p>ITHub University © 2025</p>
-    <p>Created with ❤️ by Abramov • Muhkovikov • Yazdanova</p>
+    <div class="footer-content">
+        <img src="../static/assets/ithub.jpg" alt="IThub" class="footer-logo">
+        <p>IThub University © 2025</p>
+    </div>
+    <p>Built with ❤️ by Abramov • Mukhovikov • Yazdanova</p>
 </footer>
 
 </body>
