--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,4 @@
-<div id="dashboardOverlay" class="dash-overlay" aria-hidden="true" style="display: none;">
+<div id="dashboardOverlay" class="dash-overlay" aria-hidden="true">
     <div class="dash-modal" role="dialog" aria-modal="true" aria-label="Dashboard">
         <div class="dash-header">
             <div class="dash-title">
